# AIgent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/: __init__.py
src/agent/: __init__.py  errors.py  memory.py  orchestrator.py  policies.py  prompts.py
src/agent/subagents/: __init__.py  dom_analyst.py
src/app/: cli.py  config.py  i18n.py  logging.py
src/browser/: __init__.py  controller.py  observation.py  selectors.py
src/llm/: anthropic_provider.py  base.py  openai_provider.py
src/tools/: __init__.py  actions.py  dom.py  registry.py  screenshots.py
src/utils/: text.py  time.py
